# cli/src/api/mod.rs
@@ -1,3 +1,4 @@
+pub mod audit_log;
 pub mod boot_sources;
 pub mod hooks;
 pub mod hosts;
